[project]
name = "SecurePGPWebApp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adam Bajger", email = "adambaj@seznam.cz"},
]
dependencies = ["fastapi>=0.115.12"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

